tests/output/self_hosted/functype_error.txt
tests/functype_error.oomph:8: error: wrong type: should be 'func() -> Str', but it's 'func()'

    run_function(bad_callback)
                 ^^^^^^^^^^^^

